# textualeffects

./: CHANGES.txt  README.md  pyproject.toml
.github/workflows/: build-publish.yml
examples/: simple_effect.py  simple_splash.py
src/textualeffects/: __init__.py  app.py  effects.py  widget.py  widgets.py
src/textualeffects/cli/: textualeffects.py
